# ContentEngine

./: .gitignore  PLAN.md  README.md  config.yaml  pyproject.toml
content_engine/: __init__.py  cli.py  config.py  database.py
content_engine/clipper/: audio_analysis.py  cutter.py  heuristic_scorer.py  pipeline.py  scorer.py  transcriber.py
content_engine/editor/: __init__.py  captions.py  overlay.py  reframe.py  render.py
content_engine/sourcer/: downloader.py
docs/: gpu-setup.md
scripts/: create_github_issues.sh  setup_rocm.sh
tests/: test_captions.py  test_config.py  test_database.py  test_editor_config.py  test_heuristic_scorer.py  test_overlay.py  test_pipeline.py  test_reframe.py  test_scorer.py
